<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/view_add_vehicle" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/margin_normal" android:layout_marginEnd="@dimen/margin_normal"><androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_plate" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" android:ems="10" android:text="@string/enter_plate" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" /><androidx.appcompat.widget.AppCompatEditText android:id="@+id/et_plate" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" android:digits="@string/alpha_numeric" android:hint="@string/example_plate" android:maxLength="6" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/tv_plate" /><androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_cylinder_capacity" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" android:ems="10" android:text="@string/entry_cylinder_capacity" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/et_plate" /><androidx.appcompat.widget.AppCompatEditText android:id="@+id/et_cylinder_capacity" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" android:digits="@string/numeric" android:hint="@string/_150_cc" android:inputType="number" android:maxLength="7" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/tv_cylinder_capacity" /><androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_type_vehicle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" android:ems="10" android:text="@string/type_of_vehicle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/et_cylinder_capacity" /><RadioGroup android:id="@+id/cg_vehicle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" app:layout_constraintTop_toBottomOf="@+id/tv_type_vehicle"><RadioButton android:id="@+id/rb_car" android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/car" /><RadioButton android:id="@+id/rb_moto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/motorcycle" /></RadioGroup><androidx.appcompat.widget.AppCompatTextView android:id="@+id/tv_check_in_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" android:ems="10" android:text="@string/check_in_time" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/cg_vehicle" /><androidx.appcompat.widget.AppCompatTextView android:id="@+id/et_date_add" android:layout_width="match_parent" android:layout_height="@dimen/vehicle_height" android:layout_marginTop="@dimen/margin_normal" android:ems="10" android:gravity="center_vertical" android:hint="@string/enter_date" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/tv_check_in_time" /><androidx.appcompat.widget.AppCompatTextView android:id="@+id/et_time_add" android:layout_width="match_parent" android:layout_height="@dimen/vehicle_height" android:layout_marginTop="@dimen/margin_normal" android:ems="10" android:gravity="center_vertical" android:hint="@string/enter_time" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/et_date_add" /><androidx.appcompat.widget.AppCompatButton android:id="@+id/mb_add_vehicle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal" android:text="@string/enter_vehicle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/et_time_add" /></androidx.constraintlayout.widget.ConstraintLayout><include android:id="@+id/loader_add_vehicle" layout="@layout/loader" android:layout_width="match_parent" android:layout_height="match_parent" android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" /></androidx.constraintlayout.widget.ConstraintLayout>